<resources>
    <string name="app_name">Covid 19 stats</string>
    <string name="more_details">More Details</string>
    <string name="heading">COVID-19</string>
    <string name="stats">Stats</string>
    <string name="loading">Loading...</string>
    <string name="global_cases">Global Cases</string>
    <string name="virus_image">virus Image</string>
    <string name="lmao">lmao</string>
    <string name="update">Update</string>
    <string name="global_statistics">Global Statistics</string>
</resources>
